--- a/portfolio.html
+++ b/portfolio.html
@@ -44,30 +44,33 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="./assets/images/1.jpg" class="img-fluid" alt="picture1">
-                            <p class="caption p-4 text-center">Picture 1</p>
+                            <a href="https://tanatarabsattarov.github.io/Psychic-Game/"><img
+                                    src="./assets/images/psychic ball.jpg" class="img-fluid" alt="picture1">
+                                <p class="caption p-4 text-center">Psychic-Game</p>
+                            </a>
                         </div>
                         <div class="col-md-6">
-                            <img src="./assets/images/2.jpg" class="img-fluid" alt="picture2">
-                            <p class="caption p-4 text-center">Picture 2</p>
+                            <a href="https://tanatarabsattarov.github.io/unit-4-game/"><img
+                                    src="./assets/images/crystals.png" class="img-fluid" alt="picture2">
+                                <p class="caption p-4 text-center">CRYSTALS COLLECTOR GAME</p>
+                            </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="./assets/images/3.jpg" class="img-fluid" alt="picture3">
-                            <p class="caption p-4 text-center">Picture 3</p>
+                            <a href="https://tanatarabsattarov.github.io/TriviaGame/"><img
+                                    src="./assets/images/triviagame.png" class="img-fluid" alt="picture3">
+                                <p class="caption p-4 text-center">TriviaGame</p>
+                            </a>
                         </div>
                         <div class="col-md-6">
-                            <img src="./assets/images/4.jpg" class="img-fluid" alt="picture4">
-                            <p class="caption p-4 text-center">Picture 4</p>
+                            <a href="https://tanatarabsattarov.github.io/giphy/"><img src="./assets/images/giphy.jpg"
+                                    class="img-fluid" alt="picture4">
+                                <p class="caption p-4 text-center">Giphy</p>
+                            </a>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 col-offset-6">
-                            <img src="./assets/images/5.jpg" class="img-fluid" alt="picture5">
-                            <p class="caption p-4 text-center">Picture 5</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
