--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,13 @@
                                 <p class="caption p-4 text-center">Train-Scheduler</p>
                             </a>
                         </div>
+                        <div class="col-md-3">
+                            <a href="https://github.com/tanatarabsattarov/liri-node-app"><img
+                                    src="https://upload.wikimedia.org/wikipedia/en/8/8e/AppleSiriIcon2017.png"
+                                    class="img-fluid" alt="picture5">
+                                <p class="caption p-4 text-center">LIRI-node-app</p>
+                            </a>
+                        </div>
                     </div>
 
                 </div>
