--- a/index.html
+++ b/index.html
@@ -285,6 +285,33 @@
               </div>
             </div>
           </div>
+          <!-- BAMAZON -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Picture of BAMAZON"
+                  src="./assets/images/bamazon.jpg" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">BAMAZON App<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>An interactive NODE app.
+                </p>
+              </div>
+              <div class="card-reveal" style="transform: translateY(0px);"><span
+                  class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li>Pure <strong>JavaScript</strong> frontend</li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Github project"
+                    href="https://github.com/tanatarabsattarov/Bamazon" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for BAMAZON project"
+                    href="https://github.com/tanatarabsattarov/Bamazon" target="_blank" data-position="top"
+                    data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-github"></i></a></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
