--- a/index.html
+++ b/index.html
@@ -312,6 +312,63 @@
               </div>
             </div>
           </div>
+
+          <!-- FRIENDS FINDER -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Picture of BAMAZON"
+                  src="./assets/images/Find_My_Friends.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Friend Finder App<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>An interactive Front-end app.
+                </p>
+              </div>
+              <div class="card-reveal" style="transform: translateY(0px);"><span
+                  class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li>Pure <strong>JavaScript</strong> frontend</li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Github project"
+                    href="https://github.com/tanatarabsattarov/friendFinder" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-external-link"></i></a><a
+                    aria-label="Visit the Heroku repo for Friend Finder project"
+                    href="https://friends-finder-tanatar.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-github"></i></a></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- PROJECT 2 -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Picture of BAMAZON"
+                  src="./assets/images/logo-white.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">TurnTable<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>An interactive Front and Back-end app.
+                </p>
+              </div>
+              <div class="card-reveal" style="transform: translateY(0px);"><span
+                  class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>NodeJS, Express, Sequelize, MySQL, Handlebars</strong></li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Github project"
+                    href="https://github.com/tanatarabsattarov/turntable" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-external-link"></i></a><a aria-label="Visit the Heroku repo for TurnTable project"
+                    href="https://theturntable.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-github"></i></a></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
