--- a/index.html
+++ b/index.html
@@ -369,6 +369,34 @@
               </div>
             </div>
           </div>
+
+          <!-- NEWS-ROBBER -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Picture of NEWS-ROBBER"
+                  src="./assets/images/news_pic.jpg" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">News Robber<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>An interactive Front and Back-end app.
+                </p>
+              </div>
+              <div class="card-reveal" style="transform: translateY(0px);"><span
+                  class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>NodeJS, Express, MongoDB, Mongoose, Cherrio (Scrapeing package) </strong></li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Github project"
+                    href="https://github.com/tanatarabsattarov/news-robber" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-external-link"></i></a><a aria-label="Visit the Heroku repo for News-robber app"
+                    href="https://news-robber.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
+                      class="fa fa-github"></i></a></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
