--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <div class="card-reveal" style="transform: translateY(0px);"><span
                   class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>NodeJS, Express, MongoDB, Mongoose, Cherrio (Scrapeing package) </strong></li>
+                  <li><strong>NodeJS, Express, MongoDB, Mongoose, Cherrio (Scraping package) </strong></li>
                 </ul>
                 <div class="card-action"><a aria-label="Visit Github project"
                     href="https://github.com/tanatarabsattarov/news-robber" target="_blank" data-position="top"
