--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                   <p class="brown-text">Boston, MA</p>
                   <ul>
                     <li>M.A.</li>
-                    <li>Digital Media Design</li>
+                    <li>Software Engineering</li>
                   </ul>
                 </div>
                 <div class="card-content col s4 m2">
@@ -528,7 +528,7 @@
             data-position="top" data-tooltip="View Tanatar on GitHub"
             class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a><a
             alt="" href="http://github.com/tanatarabsattarov" target="_blank"
-            class="hoverline">github.com/tanatarabsattarov</a></p>
+            class="hoverline">github.com/tanatarr</a></p>
         <p><a aria-label="View Tanatar on LinkedIn" href="http://linkedin.com/in/absattarov" target="_blank"
             data-position="top" data-tooltip="View Tanatar on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
