--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         <p><a aria-label="View Tanatar on GitHub" href="http://github.com/tanatarabsattarov" target="_blank"
             data-position="top" data-tooltip="View Tanatar on GitHub"
             class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a><a
-            alt="" href="http://github.com/tanatarabsattarov" target="_blank"
+            alt="" href="http://github.com/tanatarr" target="_blank"
             class="hoverline">github.com/tanatarr</a></p>
         <p><a aria-label="View Tanatar on LinkedIn" href="http://linkedin.com/in/absattarov" target="_blank"
             data-position="top" data-tooltip="View Tanatar on LinkedIn"
