--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 <div class="card-content col s8 m10">
                   <p><span class="card-title"><a href="https://www.extension.harvard.edu/"
                         class="teal-text hoverline">Harvard Extension School</a></span></p>
-                  <p class="brown-text">Boston, MA</p>
+                  <p class="brown-text">Cambridge, MA</p>
                   <ul>
                     <li>M.A.</li>
                     <li>Software Engineering</li>
