--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             data-tooltip="Email Tanatar" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i
               class="fa fa-envelope"></i></a><a alt="" href="mailto:absattarov@gmail.com" target="_blank"
             class="hoverline">absattarov@gmail.com</a></p>
-        <p><a aria-label="View Tanatar on GitHub" href="http://github.com/tanatarabsattarov" target="_blank"
+        <p><a aria-label="View Tanatar on GitHub" href="http://github.com/tanatarr" target="_blank"
             data-position="top" data-tooltip="View Tanatar on GitHub"
             class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a><a
             alt="" href="http://github.com/tanatarr" target="_blank"
